# qrate-gui

./: COPYING  Cargo.toml  README.md  build.rs
assets/locales/: en-US.ftl  en.yml  ko-KR.ftl  ko.yml  ru-RU.ftl  ru.yml
examples/: intro.rs  simple_app.rs
src/: control_tower.rs  control_tower.slint  lib.rs  load_file.rs
